Fix word wrap (#93)

--- a/src/pages/ProfilePage.module.scss
+++ b/src/pages/ProfilePage.module.scss
@@ -67,6 +67,7 @@
       color: var(--dark-100);
       font-size: 14px;
       text-align: justify;
+      word-wrap: break-word;
     }
     .follow__info {
       display: flex;
